fix alignment and share button

--- a/webapp/app/assets/stylesheets/gravitly-style.less
+++ b/webapp/app/assets/stylesheets/gravitly-style.less
@@ -288,14 +288,13 @@ body,html {
 
 .post-details{
 	margin: 10px 0px 0px 0px;
-	width: 300px;
-	float: left;
 	.details-container{
 		float: left;
 	}
 
 	.details {
-		width: 400px;
+		width: 300px;
+		float:left;
 	}
 
 
